# cardano-marketplace

./: .dockerignore  .gitignore  1000-wallets.txt  README.MD  address-setup.sh  cabal.project  cardano-marketplace.cabal  open-marketplace.cabal
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: Main.hs  ParallelUtils.hs  Reporting.hs  Wallet.hs
benchmark-parallel/: ParallelBench.hs  ParallelUtils.hs
docs/: RunOnPrivateTestnet.md  build.md  cli.md
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/src/: App.vue  config.ts  types.ts
frontend/src/components/: App.vue  Editor.vue  Listing.vue  Modal.vue  Offer.vue  Wallet.vue
frontend/src/router/: index.ts
frontend/src/scripts/: blockfrost.ts  database.ts  sotre.ts  wallet.ts
marketplace-app/: Main.hs
marketplace-app/Cardano/Marketplace/: Cli.hs  Server.hs
marketplace-app/Cardano/Marketplace/Common/: TextUtils.hs
marketplace-app/Cardano/Marketplace/V1/: Core.hs  RequestModels.hs  ServerRuntimeContext.hs
marketplace-cli/: Cli.hs  Main.hs
marketplace-core/Cardano/Marketplace/: Cli.hs  ConfigurableMarketplace.hs  Server.hs  SimpleMarketplace.hs
marketplace-core/Cardano/Marketplace/Common/: ConsoleWritable.hs  TextUtils.hs  TransactionUtils.hs
marketplace-core/Cardano/Marketplace/V1/: Core.hs  RequestModels.hs  ServerRuntimeContext.hs
marketplace-core/Cardano/Marketplace/V2/: Core.hs
marketplace-core/Cardano/Marketplace/V3/: Core.hs
marketplace-plutus/Plutus/Contracts/V1/: Auction.hs  Marketplace.hs  MarketplaceConfig.hs  MarketplaceOffer.hs  SimpleMarketplace.hs
marketplace-plutus/Plutus/Contracts/V2/: AlwaysFail.hs  ConfigurableMarketplace.hs  Marketplace.hs  MarketplaceConfig.hs  SimpleMarketplace.hs
marketplace-plutus/Plutus/Contracts/V3/: ConfigurableMarketplace.hs  MarketplaceConfig.hs  SimpleMarketplace.hs
reports/benchmark-babbage-latest-cost-model-node-8.9.4/10-wallets/: 2024-08-14_10-26-55-transaction-bench.json  2024-08-14_10-26-55-transaction-bench.md
reports/benchmark-babbage-latest-cost-model-node-8.9.4/100-wallets/: 2024-08-14_09-59-21-transaction-bench.json  2024-08-14_09-59-21-transaction-bench.md
reports/benchmark-cluster-cardano-node-10.1.2/10-wallets/: 2024-11-13_08-26-23-transaction-bench.json  2024-11-13_08-26-23-transaction-bench.md  2024-11-20_04-18-45-transaction-bench.json  2024-11-20_04-18-45-transaction-bench.md
reports/benchmark-cluster-cardano-node-10.1.2/100-wallets/: 2024-11-13_09-49-45-transaction-bench.json  2024-11-13_09-49-45-transaction-bench.md
reports/benchmark-cluster-cardano-node-9.1.0/: 2024-08-12_07-32-08-transaction-bench.json  2024-08-12_07-32-08-transaction-bench.md
reports/benchmark-cluster-ccardano-node-9.1.0/10-wallets/: 2024-11-15_06-19-26-transaction-bench.json  2024-11-15_06-19-26-transaction-bench.md  2024-11-20_04-30-04-transaction-bench.json  2024-11-20_04-30-04-transaction-bench.md
reports/benchmark-cluster-ccardano-node-9.1.0/100-wallets/: 2024-11-15_06-11-45-transaction-bench.json  2024-11-15_06-11-45-transaction-bench.md
reports/benchmark-conway-cardano-node-9.1.0/10-wallets/: 2024-08-13_06-49-22-transaction-bench.json  2024-08-13_06-49-22-transaction-bench.md  2024-08-22_06-43-11-transaction-bench.json  2024-08-22_06-43-11-transaction-bench.md  2024-08-22_06-45-53-transaction-bench.json  2024-08-22_06-45-53-transaction-bench.md  2024-08-22_06-48-56-transaction-bench.json  2024-08-22_06-48-56-transaction-bench.md  2024-08-22_06-51-21-transaction-bench.json  2024-08-22_06-51-21-transaction-bench.md  2024-08-22_06-55-54-transaction-bench.json  2024-08-22_06-55-54-transaction-bench.md
reports/benchmark-conway-cardano-node-9.1.0/100-wallets/: 2024-08-13_06-53-06-transaction-bench.json  2024-08-13_06-53-06-transaction-bench.md  2024-08-22_07-08-25-transaction-bench.json  2024-08-22_07-08-25-transaction-bench.md  2024-08-22_07-28-20-transaction-bench.json  2024-08-22_07-28-20-transaction-bench.md  2024-08-22_07-36-30-transaction-bench.json  2024-08-22_07-36-30-transaction-bench.md  2024-08-22_07-45-49-transaction-bench.json  2024-08-22_07-45-49-transaction-bench.md  2024-08-22_07-52-49-transaction-bench.json  2024-08-22_07-52-49-transaction-bench.md
reports/benchmark-sanchonet-cardano-api-8.46/: 2024-06-26_06-59-51-transaction-bench.json  2024-06-26_06-59-51-transaction-bench.md
reports/benchmark-sanchonet-cardano-api-9.0.0/: 2024-07-17_09-02-45-transaction-bench.json  2024-07-17_09-02-45-transaction-bench.md
reports/test-cluster-cardano-node-10.1.2/: 2024-11-13_08-16-55-transaction-report.md  junit.xml
reports/test-sanchonet-cardano-api-8.46/: 2024-06-26_07-39-33-junit.xml  2024-06-26_07-39-33-transaction-report.md
reports/test-sanchonet-cardano-api-9.0.0/: 2024-07-17_05-01-36-transaction-report.md  2024-07-23_10-52-57-transaction-report.md  2024-08-07_09-38-46-transaction-report.md  junit.xml
scripts/: balance.sh  create-collateral.sh  market-utxos.sh  sell-token.sh
test/: Main.hs  Test.hs
test-reports/: junit.xml
test-reports/v2/: junit.xml
test-reports/v2/configurableMarket/: junit.xml
test-reports/v2/simpleMarket/: junit.xml
test-reports/v3/: junit.xml
test-reports/v3/configurableMarket/: junit.xml
test-reports/v3/simpleMarket/: junit.xml
test/Test/: CollateralReturnTest.hs  Common.hs  ReferenceDataTest.hs  ReferenceScriptTest.hs  Reporting.hs  TestContext.hs  TestStoryConfigurableMarket.hs  TestStoryConfigurableMarketV2.hs  TestStoryConfigurableMarketV3.hs  TestStorySimpleMarket.hs  TestStorySimpleMarketV2.hs  TestStorySimpleMarketV3.hs
