cabal-version:      2.4
name:               cardano-marketplace
version:            3.0.0.0

-- A short (one-line) description of the package.
-- synopsis: Simple marketplace for buying and selling of tokens.

-- A longer description of the package.
-- description: Simple marketplace for buying and selling of tokens.

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0

author:             Sireto
maintainer:         Sireto

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library marketplace-plutus
  exposed-modules:
    Plutus.Contracts.V1.SimpleMarketplace
    Plutus.Contracts.V2.SimpleMarketplace
    Plutus.Contracts.V2.MarketplaceConfig
    Plutus.Contracts.V2.ConfigurableMarketplace
  hs-source-dirs: marketplace-plutus
  build-depends:
      base  -any
    , plutus-tx    
    , cardano-ledger-alonzo
    , plutus-ledger-api
    , plutus-tx-plugin
    , aeson
    , bytestring
    , cardano-api
    , serialise
    , kuber

library marketplace-core
  exposed-modules:
    Cardano.Marketplace.V1.Core
    Cardano.Marketplace.Common.TextUtils
    Cardano.Marketplace.Common.TransactionUtils
  hs-source-dirs: marketplace-core
  build-depends:
      base -any
    , aeson
    , bytestring
    , containers
    , unordered-containers
    , filepath
    , serialise
    , http-types
    , marketplace-plutus
    , text 
    , text-conversions
    , cardano-api
    , cardano-ledger-shelley
    , cardano-ledger-core
    , cardano-ledger-shelley-ma
    , cardano-ledger-alonzo
    , plutus-ledger-api
    , plutus-tx
    , cborg
    , cardano-binary
    , mtl
    , kuber

executable  market-cli
  main-is:  Main.hs
  hs-source-dirs: marketplace-cli
  other-modules:
      Cli
  build-depends:
      base -any
    , directory
    , cmdargs >= 0.10.18
    , plutus-ledger-api
    , text
    , containers
    , bytestring
    , aeson
    , serialise
    , cardano-ledger-shelley
    , cardano-ledger-core
    , cardano-ledger-shelley-ma
    , cardano-ledger-alonzo
    , cardano-api
    , kuber
    , marketplace-plutus
    , marketplace-core

test-suite marketplace-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is:  Test.hs
  hs-source-dirs: test
  other-modules:
    Test.ReferenceScriptTest
  build-depends:
    base >= 4.9 && <5
    , kuber
    , QuickCheck -any
    , tasty -any
    , tasty-hunit -any
    , containers
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , cardano-binary
    , vector
    , unordered-containers
    , marketplace-plutus
    , marketplace-core
    , time
    , cardano-ledger-babbage


--Used for running tests without the cabal test so output can be viewed without --test-show-details=streaming
executable market-test
  default-language: Haskell2010
  main-is:  Main.hs
  hs-source-dirs: test
  other-modules:
    Test.ReferenceScriptTest
    Test.ReferenceDataTest
  build-depends:
    base >= 4.9 && <5
    , kuber
    , QuickCheck -any
    , tasty -any
    , tasty-hunit -any
    , containers
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-babbage
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , cardano-binary
    , vector
    , unordered-containers
    , marketplace-plutus
    , marketplace-core
    , time
