cabal-version:      2.4
name:               cardano-marketplace
version:            3.0.0.0

-- A short (one-line) description of the package.
-- synopsis: Simple marketplace for buying and selling of tokens.

-- A longer description of the package.
-- description: Simple marketplace for buying and selling of tokens.

-- A URL where users can report bugs.
-- bug-reports:

license: Apache-2.0

author:             Sireto
maintainer:         Sireto

-- A copyright notice.
-- copyright:
-- category:
-- extra-source-files: CHANGELOG.md

library marketplace-plutus
  exposed-modules:
    Plutus.Contracts.V2.SimpleMarketplace
    Plutus.Contracts.V2.MarketplaceConfig
    Plutus.Contracts.V2.ConfigurableMarketplace
    Plutus.Contracts.V3.ConfigurableMarketplace
    Plutus.Contracts.V3.SimpleMarketplace
    Plutus.Contracts.V3.MarketplaceConfig
  hs-source-dirs: marketplace-plutus
  build-depends:
      base  -any
    , plutus-tx    
    , cardano-ledger-alonzo
    , plutus-ledger-api
    , plutus-tx-plugin
    , plutus-core
    , aeson
    , bytestring
    , cardano-api
    , serialise
    , kuber

library marketplace-core
  exposed-modules:
    Cardano.Marketplace.V2.Core
    Cardano.Marketplace.V3.Core
    Cardano.Marketplace.Common.TextUtils
    Cardano.Marketplace.Common.TransactionUtils
    Cardano.Marketplace.SimpleMarketplace
    Cardano.Marketplace.ConfigurableMarketplace
  hs-source-dirs: marketplace-core
  build-depends:
      base -any
    , aeson
    , bytestring
    , containers
    , unordered-containers
    , filepath
    , serialise
    , http-types
    , marketplace-plutus
    , cardano-api
    , plutus-ledger-api
    , text 
    , text-conversions
    , plutus-tx
    , mtl
    , kuber

executable  market-cli
  main-is:  Main.hs
  hs-source-dirs: marketplace-cli
  other-modules:
      Cli
  build-depends:
      base -any
    , directory
    , cmdargs
    , plutus-ledger-api
    , text
    , containers
    , bytestring
    , aeson
    , serialise
    , cardano-ledger-shelley
    , cardano-ledger-core
    , cardano-ledger-alonzo
    , cardano-api
    , kuber
    , marketplace-plutus
    , marketplace-core

test-suite market-test
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is:  Main.hs
  hs-source-dirs: test
  test-options:  -v2
  other-modules:
    Test.Common
    Test.TestStoryConfigurableMarket
    Test.Reporting
    Test.TestContext
    Test.TestStorySimpleMarket
  build-depends:
    base >= 4.9 && <5
    , hspec
    , hspec-junit-formatter >= 1.0
    , kuber
    , lens
    , containers
    , directory
    , bytestring
    , serialise
    , cborg
    , cardano-binary
    , text
    , aeson
    , text-conversions
    , cardano-api
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-slotting
    , plutus-ledger-api
    , plutus-tx
    , ouroboros-network
    , cardano-binary
    , vector
    , unordered-containers
    , marketplace-plutus
    , marketplace-core
    , time
    , cardano-ledger-babbage
    , exceptions  


benchmark marketplace
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  Main-is:             Main.hs
  default-language:    Haskell2010
  other-modules: 
      Reporting
      ParallelUtils
      Wallet
  build-depends:        
      base
    , cardano-api
    , aeson
    , statistics
    , vector
    , text
    , containers
    , criterion
    , plutus-tx
    , cborg
    , cardano-binary
    , mtl
    , split
    , clock
    , time
    , async
    , cardano-ledger-core
    , random
    , kuber
    , marketplace-core
    , marketplace-plutus
    , plutus-ledger-api
    , plutus-tx
    , directory
    , random-shuffle
    , bytestring
    , cardano-ledger-babbage
    , cardano-ledger-alonzo
    , cardano-ledger-shelley
    , cardano-crypto
    , cardano-crypto-class
    , cardano-addresses
    , memory
    , lens
